--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@
 
 en:
   hello: "Hello world"
+  logo: "Almost new fashion with guarantee"
   welcome: "Welcome! Soon we will launch our site in this country."
   suscribe: "Suscribe to receive our newsletter."
   preference: "Preferences"
