--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -5,3 +5,5 @@ fr:
   suscribe: "Inscrivez-vous pour recevoir notre newsletter."
   preference: "Préférences"
   button: "Inscrivez-moi!"
+  greetings: "Merci de vous être abonné à notre newsletter, 
+              un e-mail a été envoyé dans votre boîte de réception confirmant votre inscription."
